# ojax

./: .gitignore  CHANGELOG.md  doc-n-test.sh  pyproject.toml  readme.rst  requirements.txt  run_black.sh  run_coverage.sh  run_mypy.sh  run_tests.sh  setup.py
.github/workflows/: deploy-doc.yml
docs/: changelog-link.html  example.html  genindex.html  index.html  install.html  introduction.html  logo.html  modules.html  objects.inv  ojax.html  py-modindex.html  quickstart.html  readme-content.html  readme.html  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/ojax/: otree.html  pureclass.html
docs/_sources/: changelog-link.rst  example.rst.txt  index.rst  install.rst  introduction.rst  modules.rst.txt  ojax.rst  quickstart.rst  readme-content.rst  readme-content.rst.txt  readme.rst
docs/source/: conf.py  example.rst  index.rst  install.rst  logo.rst  ojax.rst  quickstart.rst  readme-content.rst  readme.rst
ojax/: __init__.py  otree.py  pureclass.py
sphinx/: Makefile  doc-build.sh  requirements.txt
test/: test_example.py
tests/: test_example.py  test_ojax.py
