[project]
name = "ojax"
authors = [
  {name="Yuesong Shen"},
]
description = "An extension for modular JAX code."
readme = "readme.rst"
license = {text="Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "typing-extensions",
  "jax",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ysngshn/ojax"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ojax"]

[tool.setuptools.dynamic]
version = {attr = "ojax.__version__"}

[project.optional-dependencies]
dev = [
  "coverage",
  "mypy",
  "black",
  "twine",
  "sphinx",
  "myst-parser",
  "sphinx-book-theme",
  "sphinx-rtd-theme",
  "sphinx-readme",
]